[package]
name = "bound"
version = "0.1.0"
edition = "2021"

[dependencies]

indicatif = "0.17.5"

tokio = { version = "1.28", features = ["full"] }

reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.3.0", features = ["derive"] }
chrono = "0.4"
thiserror = "~1"
anyhow = "1.0.89"
tempfile = "3.13.0"
itertools = "0.13.0"
codeowners = "0.1.3"
serde_json = "1.0.128"
dirs = "5.0.1"
keyring = "3.3.0"
tsv = "0.1.1"
csv = "1.3.0"
